# Veritoken

./: .gitignore  LICENSE  README.md  code-of-conduct.md  package-lock.json
contracts/carbon-credit-token/: Cargo.toml
contracts/carbon-credit-token/src/: lib.rs  test.rs
contracts/compliance-engine/: Cargo.toml
contracts/compliance-engine/src/: lib.rs  test.rs
contracts/invoice-token/: Cargo.toml
contracts/invoice-token/src/: lib.rs  test.rs
contracts/kyc-registry/: Cargo.toml
contracts/kyc-registry/src/: lib.rs  test.rs
contracts/property-token/: Cargo.toml
contracts/property-token/src/: lib.rs  test.rs
contracts/rwa-token/: Cargo.toml
contracts/rwa-token/src/: allowance.rs  balance.rs  compliance.rs  kyc.rs  lib.rs  metadata.rs  sep41_compliance.rs  storage_types.rs  test.rs
frontend/: .eslintrc.cjs  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/lib/: stellar.ts  wallet.ts
frontend/src/pages/: AdminPage.tsx  CarbonPage.tsx  Dashboard.tsx  DeployPage.tsx  InvoicePage.tsx  KycPage.tsx  PropertyPage.tsx
frontend/src/types/: index.ts
scripts/: deploy.sh
