[package]
name = "invoice-token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kyc-registry = { path = "../kyc-registry" }

[features]
testutils = ["soroban-sdk/testutils"]
