[package]
name = "rwa-token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kyc-registry = { path = "../kyc-registry" }
compliance-engine = { path = "../compliance-engine" }

[features]
testutils = ["soroban-sdk/testutils"]
